--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Weijie (Jack) Zhang
 email: wzhang3912@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A personal website by Jack. 
-url: "https://wzhang3912.github.io/"
+url: "https://wzhang3912.github.io"
 github_username: Wzhang3912
 repository: "Wzhang3912/Wzhang3912.github.io"
 minimal_mistakes_skin: default
